# edgradio

./: .env.example  main.py  name_issue.md  pyproject.toml  universal_ui.md
app/: __init__.py  config.py
clients/: __init__.py  base_mcp_client.py  bubble_mcp_client.py  email_mcp_client.py  latex_mcp_client.py  mcp_client.py  regrade_mcp_client.py  scrub_mcp_client.py  testgen_mcp_client.py  xai_client.py
components/: __init__.py
workflows/: __init__.py  base.py  registry.py
workflows/archive_manager/: workflow.py
workflows/bubble_test/: __init__.py  state.py  workflow.py
workflows/document_scrub/: workflow.py
workflows/email_reports/: workflow.py
workflows/essay_grading/: __init__.py  workflow.py
workflows/reading_handout/: __init__.py  workflow.py
workflows/regrade/: workflow.py
workflows/review/: workflow.py
workflows/test_builder/: __init__.py  state.py  workflow.py
